fix: image not showing

--- a/LandingPageTask/src/components/navbar/Navbar.css
+++ b/LandingPageTask/src/components/navbar/Navbar.css
@@ -24,3 +24,7 @@ nav{
 .search>input{
     width: 100%;
 }
+.logo>img{
+    height: 60px;
+    width: 130px;
+}
